add local faker script

--- a/cypress/e2e/pagination-sort-filter-manager/index.html
+++ b/cypress/e2e/pagination-sort-filter-manager/index.html
@@ -26,8 +26,9 @@
       <header>
         <h1>Table Manager Plugin Example</h1>
         <p>
-          A simple yet powerful jQuery table management plugin that provides an
-          easy way to sort/filter/paginate tabular data in an HTML table.
+          A simple yet powerful jQuery table management plugin that
+          provides an easy way to sort/filter/paginate tabular data in
+          an HTML table.
         </p>
         <hr />
       </header>
@@ -47,11 +48,9 @@
       </table>
     </div>
     <!-- External jQuery -->
-    <script
-      src="https://pagecdn.io/lib/faker/3.1.0/faker.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- other libraries -->
+    <script type="text/javascript" src="./faker.min.js"></script>
     <script type="text/javascript" src="./tableManager.js"></script>
     <script type="text/javascript" src="./app.js"></script>
   </body>
